--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1,3 +1,96 @@
+
+body {
+    margin:0;
+    font-size:13px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+#top {
+    padding-right: 20px;
+    text-align:right;
+    height:40px;
+    background-color: #CCC;
+    border-bottom:1px solid #444;
+}
+
+#layout {
+    width:100%;
+    height:100%;
+}
+
+#left {
+    /* text-align: center; */
+}
+
+#right{
+    border-left:1px solid #444;
+    width:465px;
+    background-color: #EEE;
+}
+
+#bottom {
+    hight:100px;
+}
+
+.chatBox
+{
+    width:100%;
+    height:150px;
+    overflow:auto;
+    background-color: white;
+    border-bottom:1px solid #444;
+    border-top:1px solid #444;
+    font-size:12px;
+}
+
+.chatTime
+{
+    font-size:10px;
+    font-family:"Times New Roman", Times, serif;
+}
+
+#chatMessage{
+    height: 30px;
+    border:0;
+    width:100%;
+}
+
+#right table {
+    width:100%;
+    border-collapse:collapse;
+}
+
+#right table td {
+    padding:5px 5px 5px 5px;
+    border-top:1px solid #ccc;
+    border-bottom:1px solid #ccc;
+}
+
+h1 {
+    font-size:16px;
+    padding-left:5px;
+}
+
+.online
+{
+    border: #00FF00 solid 1px;
+    background-color:#C6FFC6;
+}
+.offline
+{
+    border:1px #FF0000 solid;
+    background-color: #FF9999;
+}
+
+img {
+    -webkit-user-select: none;
+}
+
+/* Special tablet navigation */
+#tableNavigation {
+    display:none;
+}
+
 /* FONT STACK */
 body,
 input, select, textarea {
@@ -9,50 +102,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* BASE LAYOUT */
-
-html {
-	background-color: #ddd;
-	background-image: -moz-linear-gradient(center top, #aaa, #ddd);
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #aaa), color-stop(1, #ddd));
-	background-image: linear-gradient(top, #aaa, #ddd);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr = '#aaaaaa', EndColorStr = '#dddddd');
-	background-repeat: no-repeat;
-	height: 100%;
-	/* change the box model to exclude the padding from the calculation of 100% height (IE8+) */
-	-webkit-box-sizing: border-box;
-	   -moz-box-sizing: border-box;
-	        box-sizing: border-box;
-}
-
-body {
-    font: 62.5% "Trebuchet MS", sans-serif;
-}
-
-html.no-cssgradients {
-	background-color: #aaa;
-}
-
-.ie6 html {
-	height: 100%;
-}
-
-html * {
-	margin: 0;
-}
-
-body {
-	background: #ffffff;
-	color: #333333;
-	margin: 0 auto;
-	overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
-	   -moz-box-shadow: 0 0 0.3em #255b17;
-	-webkit-box-shadow: 0 0 0.3em #255b17;
-	        box-shadow: 0 0 0.3em #255b17;
-}
-
-#grailsLogo {
-	background-color: #abbf78;
-}
 
 /* replace with .no-boxshadow body if you have modernizr available */
 .ie6 body,
@@ -68,18 +117,11 @@ body {
 }
 
 a:link, a:visited, a:hover {
-	color: #48802c;
+	color: #444;
 }
 
 a:hover, a:active {
 	outline: none; /* prevents outline in webkit on active links but retains it for tab focus */
-}
-
-h1 {
-	color: #48802c;
-	font-weight: normal;
-	font-size: 1.25em;
-	margin: 0.8em 0 0.3em 0;
 }
 
 ul {
@@ -90,60 +132,12 @@ img {
 	border: 0;
 }
 
-/* GENERAL */
-
-#grailsLogo a {
-	display: inline-block;
-	margin: 1em;
-}
-
-.content {
-}
-
-.content h1 {
-	border-bottom: 1px solid #CCCCCC;
-	margin: 0.8em 1em 0.3em;
-	padding: 0 0.25em;
-}
-
-.scaffold-list h1 {
-	border: none;
-}
-
-.footer {
-	background: #abbf78;
-	color: #000;
-	clear: both;
-	font-size: 0.8em;
-	margin-top: 1.5em;
-	padding: 1em;
-	min-height: 1em;
-}
-
-.footer a {
-	color: #255b17;
-}
-
-.spinner {
-	background: url(../images/spinner.gif) 50% 50% no-repeat transparent;
-	height: 16px;
-	width: 16px;
-    padding: 0.5em;
-    position: absolute;
-    right: 0;
-	top: 0;
-	text-indent: -9999px;
-}
-
 /* NAVIGATION MENU */
 
 .nav {
 	background-color: #efefef;
-	padding: 0.5em 0.75em;
-	   -moz-box-shadow: 0 0 3px 1px #aaaaaa;
-	-webkit-box-shadow: 0 0 3px 1px #aaaaaa;
-	        box-shadow: 0 0 3px 1px #aaaaaa;
-	zoom: 1;
+	padding: 1px 10px 1px 10px;
+    border-bottom:1px solid #CCC;
 }
 
 .nav ul {
@@ -206,41 +200,6 @@ img {
 }
 
 /* CREATE/EDIT FORMS AND SHOW PAGES */
-
-fieldset,
-.property-list {
-	margin: 0.6em 1.25em 0 1.25em;
-	padding: 0.3em 1.8em 1.25em;
-	position: relative;
-	zoom: 1;
-	border: none;
-}
-
-.property-list .fieldcontain {
-	list-style: none;
-	overflow: hidden;
-	zoom: 1;
-}
-
-.fieldcontain {
-	margin-top: 1em;
-}
-
-.fieldcontain label,
-.fieldcontain .property-label {
-	color: #666666;
-	text-align: right;
-	width: 25%;
-}
-
-.fieldcontain .property-label {
-	float: left;
-}
-
-.fieldcontain .property-value {
-	display: block;
-	margin-left: 27%;
-}
 
 label {
 	cursor: pointer;
@@ -432,10 +391,9 @@ th.desc a {
 	margin: 0;
 	padding: 0.3em 0.2em;
 	text-align: center;
-	   -moz-box-shadow: 0 0 3px 1px #AAAAAA;
-	-webkit-box-shadow: 0 0 3px 1px #AAAAAA;
-	        box-shadow: 0 0 3px 1px #AAAAAA;
 	background-color: #EFEFEF;
+    border-top:1px solid #CCC;
+    border-bottom:1px solid #CCC;
 }
 
 .pagination a,
@@ -471,11 +429,11 @@ th.desc a {
 	background-color: #efefef;
 	overflow: hidden;
 	padding: 0.3em;
-	   -moz-box-shadow: 0 0 3px 1px #aaaaaa;
-	-webkit-box-shadow: 0 0 3px 1px #aaaaaa;
-	        box-shadow: 0 0 3px 1px #aaaaaa;
+    border: none;
+    border-top:1px solid #ccc;
+    border-bottom:1px solid #ccc;
 	margin: 0.1em 0 0 0;
-	border: none;
+
 }
 
 .buttons input,
@@ -534,4 +492,8 @@ th.desc a {
 a.skip {
 	position: absolute;
 	left: -9999px;
+}
+
+.property-value {
+    display: block;
 }
